--- a/css/main.css
+++ b/css/main.css
@@ -91,23 +91,54 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-#wrapper{
-	margin:right;350px
-	float:right;
-	margin-left: 211px;
-
+#logo{
+	float:left
 }
+#bbb{
+	float:left;
+	height:32px;
+	width:121px;
+	margin-left:280px;
+	margin-right:50px;
+	margin-top:18px;
+}
+#text{
+	float:left;
+}
+#call{
+	font-size:12pt;
+	font-weight:700;
+	float:left;
+	font-family:Helvetica;
+}
+#number{
+	float:right;
+	font-size:12pt;
+	font-weight:bold;
+	color:#3f8252;
+}
+#available{
+	font-size:12pt;
+	margin-left:47px;
+	font-family:Helvetica;
+}
+#facebook{
+	clear:both;
+	margin-left:10px;
+}
+#branding{
+	margin-left:150px;
+}
+
 #contact{
 	float:right;
-	.1-800-555-5555{
-		color:green;
-	}
 }
 
-
 #primary_links{
+	font-family:Helvetica;
 	background-color:	#479147;
 	text-decoration: none;
+	margin-top:50px;
 }
 
 #primary_links li{
@@ -125,17 +156,18 @@ textarea {
 }
 
 
-#center_fold h1{
-	font:Verdana;
+#center_txt h1{
+	font-family:Helvetica;
 	color:#666666;
 }
-			#center_fold p{
-			color:#666666;
+			#center_txt p{
+				font-family:Helvetica;
+				color:#666666;
 			}
 			h5{
 				font-size:15px;
 				padding-left:15px;
-		font:Helvetica;
+		font-family:Helvetica;
 		color:#479147;	
 }
 #fB{
@@ -144,106 +176,280 @@ width: 980px;
 margin-left: auto;
 margin-right:auto;
 background-color: #4d679c;
-border-radius: 8px;
-}		
-#fB p{
-	color:white;
-	line-height:50px;
+border-radius:8px;
+font-size:15px;
+}
+#fbtext{
+	font-family:Helvetica;
 	font-size:20px;
+	color:white;
+}		
+#fb_logo1{
+	float:left;
 }
-#welcome_to_empire{
-	font-size:14px;
-	margin-left:200px;
-	
+#likefb {
+	margin-left:400px;
 }
-#welcome_to_empire ul{
-	display:block;
+#fb_logo2{
 	float:right;
-	margin-top:-125px;
-	margin-right:250px;
 }
-#table{
-	width:980px;
-	margin-top:39px;
-	text-align:left;
-	margin-bottom:41px;
-	margin-right:auto;
+
+
+#welcome {
+        width:860px;
+        margin-left: auto;
+        margin-right: auto;
+
+
 }
-#table th{
-        background-color: #7f8c8d;
-        color: white;
-        text-align:center;
-        letter-spacing: 7px;
-        font-family: Open Sans Semibold;
-        font-size: 22px;
-        height: 67px;
-        border-left: 3px solid white;
-}
-#table td{
+#welcome h1 {
+        text-transform: uppercase;
         font-size: 14px;
-        text-align: left;
+        width: 380px;
+        margin-top:25px;
+        font-family:Helvetica;
+        font-weight:700px;
+}
+
+#welcome p {
+        font-family:Helvetica;
+        float: left;
+        width: 400px;
+        font-size: 14px;
+        font-weight:400px;
+}
+#welcome ul {
+        font-size: 14px;
+        float: right;
+        width: 400px;
+
+}
+.list {
+        font-family: Helvetica;
+        font-weight:400px;
+}
+#table {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 160px;
+        margin-bottom: 50px;
+        width: 860px;
+        height: 300px;
+
+        border:2px solid white;
+        vertical-align: middle;
+        text-indent: 25px;
         background-color: #f7f7f7;
+}
+#tbody {
+        display: table-row-group;
+        vertical-align: middle;
+        border-color: inherit;
+}
+#title  {
+        background-color: #7f8c8d;
+        color:white;
+        text-align: center;
+        letter-spacing: 5px;
+        font-family:Helvetica;
+
+}
+
+#table td {
+        text-align: left;
         color: #999999;
         border: 1px solid #e9e9e9;
         border-left: 3px solid white;
         height: 41px;
-        font-family: Open Sans;
+        font-family:Helvetica;
         font-size: 14px;
         white-space: nowrap;
 }
-table #blue {
+#table th {
+        background-color: #7f8c8d;
+        color:white;
+        text-transform: uppercase;
+        text-align: center;
+        letter-spacing: 5px;
+        height: 67px;
+        border-left: 3px solid white;
+        font-family:Helvetica;
+        font-weight: 200px;
+
+}
+#blue {
         background-color: #2980b9;
-        width:30px;
+        width: 30px;
+
 }
-table #red {
+#blue_pos {
+        position: absolute;
+        top: 1083px;
+        text-align:center;
+
+}
+#red_pos {
+        position: absolute;
+        top: 1276px;
+        text-align:center;
+
+}
+#red {
         background-color: #c0392b;
-        width:30px;
+        width: 30px;
+        margin-top: -50px;
 }
-#heating{
-	background-color:#D8D8D8;
-	font:Helvetica;
-	color:#900000;
+#table red {
+
 }
-#heating p{
-	color:gray;
+#table .rotate {
+        -webkit-transform: rotate(-90deg);
+        -moz-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+        -o-transform: rotate(-90deg);
+        letter-spacing: 3px;
+        padding: 0;
+        color: white;
+        width: 30px;
+        text-align: center;
+
 }
-#heating img{
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-bottom: 50px;
+#blue_pos .rotate {
+        margin-top: 140px;
 }
-#cooling{
-	font:Courier;
-	color:#3366FF;
-}
-#cooling p{
-	color:gray;
-}
-#cooling img{
-	margin-left: 30px;
-	margin-right: 30px;
-}
-#about_us {
-	background-color:#D8D8D8;
-	font-size:15px;
-}
-#about_us p{
-	color:gray;
-}
-#about_us img{
-	margin-left: 200;
-}
-#blue_pos{
-        position: absolute;
-        top: 1135px;
-}
-#red_pos{
-        position: absolute;
-        top: 1327px;
-}
+
 #seperator {
         border-bottom: 3px solid white;
 }
+#seperator tr {
+        display: table-row;
+        vertical-align: inherit;
+        border-color: inherit;
+}
+
+#heatcontainer {
+        position: absolute;
+        left: 0;
+        right: 0;
+        background-color: #eef1f5;
+
+}
+#heating {
+	background-color:#C0C0C0;
+        height: 398px;
+        width: 980px;
+        margin-left: auto;
+        margin-right: auto;
+
+}
+#heating h6 {
+        text-align: center;
+        color: #cc3333;
+        width: 980px;
+        font-family:Helvetica;
+        font-size:26pt;
+        margin-bottom: 10px;
+        margin-top: 30px;
+        letter-spacing: 4px;
+}
+
+#heating p {
+        text-align: center;
+        width: 980px;
+        font-family:Helvetica;
+        font-weight: 400px;
+}
+#heat1 {
+        float: left;
+        margin-left:90px;
+}
+#heat2 {
+        float: left;
+        margin-left:50px;
+}
+#heat3 {
+        float: left;
+        margin-left:50px;
+}
+
+#Cooling {
+        height: 398px;
+        width: 980px;
+        margin-top:20px;
+        margin-left: auto;
+        margin-right: auto;
+
+}
+#Cooling h6 {
+        text-align: center;
+        width: 980px;
+        color: #3399cc;
+        font-family:Helvetica;
+        font-size:26pt;
+        margin-bottom: 10px;
+        margin-top: -10px;
+        letter-spacing: 4px;
+}
+#Cooling p {
+	font-family:Helvetica;
+        width: 980px;
+}
+#co1 {
+        float: left;
+        margin-left:90px;
+}
+#co2 {
+        float: left;
+        margin-left:50px;
+}
+#co3 {
+        float: left;
+        margin-left:50px;
+}
+#about_container {
+		
+        position: absolute;
+        left: 0;
+        right: 0;
+        background-color: #eef1f5;
+        margin-top: 20px;
+}
+#aboutus {
+		background-color:#C0C0C0;
+		font-family:Helvetica;
+        margin-left: auto;
+        margin-right: auto;
+        width: 980px;
+        text-align: center;
+}
+#aboutus h6 {
+        text-align: center;
+        font-family:Helvetica;
+        font-size:26pt;
+        width: 980px;
+        margin-bottom: 10px;
+        margin-top: 30px;
+        letter-spacing: 4px;
+}
+#aboutus p{
+        text-align: center;
+        width: 980px;
+}
+#logos {
+        width: 980px;
+}
+#logos tbody {
+        display: table-row-group;
+        vertical-align: middle;
+        border-color: inherit;
+}
+#car {
+        width: 980px;
+        margin-top:30px;
+        margin-left: auto;
+        margin-right: auto;
+}
+
 .rotate{
 	-webkit-transform: rotate(-90deg);
 	-moz-transform: rotate(-90deg);
